--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,23 +8,19 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "chessboardjsx": "^2.4.2",
+    "formik": "^2.2.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "yup": "^0.30.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
+    "lint": "tsc && eslint src/ --ext .js,.jsx,.ts,.tsx"
   },
   "browserslist": {
     "production": [
@@ -39,6 +35,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "@types/yup": "^0.29.9",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.2.0"
   }
 }
