--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -8,6 +8,8 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "react/self-closing-comp": "error"
+    "react/self-closing-comp": "error",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
