--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/id1212_db
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
