--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,20 @@
+spring.application.name=Chess App Backend
+
+# Use local profile
+spring.profiles.active=dev
 
 server.error.include-message=always
 server.error.include-binding-errors=always
 
+# How we handle schema hibernate at startup
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/id1212_db
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+
+# Set the datasource driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Use JDBC to store sessions
+spring.session.store-type=jdbc
+
+# Always initialize schema
+spring.session.jdbc.initialize-schema=always
+
