--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,17 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "serve": "^11.3.2",
     "typescript": "^4.1.2",
     "yup": "^0.31.1"
   },
+  "engines": {
+    "node": "14.15.1",
+    "npm": "6.14.8"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve build/",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "lint": "tsc && eslint src/ --ext .js,.jsx,.ts,.tsx"
   },
