--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "sockjs-client": "^1.5.0",
+    "stompjs": "^2.3.3",
     "typescript": "^4.1.2",
     "yup": "^0.32.0"
   },
@@ -42,6 +44,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
     "@types/yup": "^0.29.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
