--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "chess.js": "^0.11.0",
     "chessboardjsx": "^2.4.2",
     "formik": "^2.2.5",
     "react": "^17.0.1",
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chess.js": "^0.10.1",
     "@types/react-router-dom": "^5.1.6",
     "@types/sockjs-client": "^1.5.0",
     "@types/stompjs": "^2.3.4",
