Add configuration for postgres

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,7 +10,9 @@ server.error.include-binding-errors=always
 spring.jpa.hibernate.ddl-auto=update
 
 # Set the datasource driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.platform=postgres
 
 # Use JDBC to store sessions
 spring.session.store-type=jdbc
@@ -18,3 +20,4 @@ spring.session.store-type=jdbc
 # Always initialize schema
 spring.session.jdbc.initialize-schema=always
 
+spring.jpa.show-sql=true
