--- a/backend/src/main/resources/application-dev.properties.example
+++ b/backend/src/main/resources/application-dev.properties.example
@@ -1,4 +1,4 @@
-# Infomration about MySQL db
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/id1212_db
+# Infomration about Postgres db
+spring.datasource.url=jdbc:postgresql://localhost:5432/id1212_db
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
